[gd_scene load_steps=20 format=3 uid="uid://7du3uqq5ln1g"]

[ext_resource type="Script" path="res://addons/smoothing/smoothing_2d.gd" id="1_famt6"]
[ext_resource type="Script" path="res://Scripts/floating_enemy.gd" id="1_niwrd"]
[ext_resource type="Texture2D" uid="uid://cdpw2ikuwbxxl" path="res://Sprites/shooting_enemy.png" id="2_4n82u"]
[ext_resource type="PackedScene" uid="uid://kaqdvuaks3ve" path="res://Scenes/shadow.tscn" id="3_ibq4i"]
[ext_resource type="Shader" path="res://Shaders/outline.gdshader" id="3_q1ys4"]
[ext_resource type="Shader" uid="uid://b6ehipwo7iqss" path="res://Shaders/damage_flash.tres" id="3_x38fs"]
[ext_resource type="AudioStream" uid="uid://dnvso8y63g7cy" path="res://Audio/Sounds/enemy_hurt.wav" id="6_yoelp"]
[ext_resource type="AudioStream" uid="uid://b8wa1urrkqvum" path="res://Audio/Sounds/enemy_death.wav" id="7_08csx"]
[ext_resource type="AudioStream" uid="uid://w2bthhdfvu0" path="res://Audio/Sounds/floating_enemy_shoot.wav" id="8_x3wby"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ksfxd"]
shader = ExtResource("3_q1ys4")
shader_parameter/color = Color(1, 1, 1, 0.294118)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lt5ga"]
resource_local_to_scene = true
shader = ExtResource("3_x38fs")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0
shader_parameter/silhouette_color = Color(0, 0, 0, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gi2jw"]
radius = 12.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_td67q"]
radius = 188.003

[sub_resource type="CircleShape2D" id="CircleShape2D_0a6u0"]
radius = 730.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b601e"]
radius = 569.001

[sub_resource type="Animation" id="Animation_0gg0h"]
resource_name = "FLOAT"
length = 3.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smoothing2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_vbi5v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smoothing2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1joto"]
resource_name = "SHOOTING"
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smoothing2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fy8ul"]
_data = {
"FLOAT": SubResource("Animation_0gg0h"),
"RESET": SubResource("Animation_vbi5v"),
"SHOOTING": SubResource("Animation_1joto")
}

[node name="FloatingEnemy" type="CharacterBody2D" groups=["enemy"]]
y_sort_enabled = true
script = ExtResource("1_niwrd")

[node name="ShootPos" type="Marker2D" parent="."]
position = Vector2(-8, -5.5)

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource("1_famt6")

[node name="Outline" type="Sprite2D" parent="Smoothing2D"]
material = SubResource("ShaderMaterial_ksfxd")

[node name="Sprite2D" type="Sprite2D" parent="Smoothing2D"]
material = SubResource("ShaderMaterial_lt5ga")
texture = ExtResource("2_4n82u")
hframes = 12

[node name="Shadow" parent="Smoothing2D" node_paths=PackedStringArray("sprite") instance=ExtResource("3_ibq4i")]
sprite = NodePath("../Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_gi2jw")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 19.9

[node name="HasLineOfSight" type="RayCast2D" parent="."]
target_position = Vector2(730, 0)

[node name="RunAwayArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RunAwayArea"]
shape = SubResource("CircleShape2D_td67q")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_0a6u0")

[node name="ShootRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootRange"]
shape = SubResource("CircleShape2D_b601e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fy8ul")
}
autoplay = "FLOAT"
speed_scale = 2.0

[node name="RoamTimer" type="Timer" parent="."]
autostart = true

[node name="DamageFlashTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="FollowPlayer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="DeathDespawnTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_yoelp")
volume_db = -20.0

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_08csx")
volume_db = -30.0

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_x3wby")
volume_db = -20.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="RoamTimer" to="." method="_on_roam_timer_timeout"]
[connection signal="timeout" from="DamageFlashTimer" to="." method="_on_damage_flash_timer_timeout"]
[connection signal="timeout" from="FollowPlayer" to="." method="_on_follow_player_timeout"]
[connection signal="timeout" from="DeathDespawnTimer" to="." method="_on_death_despawn_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
